<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_principal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.redewsouza.amamaria.activity.HomeActivity"
    tools:showIn="@layout/activity_home">


    <TextView
        android:id="@+id/textWSouza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:text="Desenvolvido por: WSouza Sistemas"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protetoresButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/redeButton"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/botao_redondo"
        android:drawableTop="@drawable/ic_assignment_black_24dp"
        android:paddingTop="22dp"
        android:text="@string/rede_apoio"
        android:textColor="@color/cor_menu"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dadosbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/panicoButton"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/botao_panico"
        android:drawableTop="@drawable/ic_alerta"
        android:paddingTop="22dp"
        android:text="@string/panico"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/historicoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dadosbutton" />

    <Button
        android:id="@+id/protetoresButton"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/botao_redondo"
        android:drawableTop="@drawable/ic_wc_black_24dp"
        android:paddingTop="22dp"
        android:text="@string/localizacao"
        android:textColor="@color/cor_menu"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panicoButton" />

    <Button
        android:id="@+id/historicoButton"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/botao_redondo"
        android:drawableTop="@drawable/ic_historico_calendario"
        android:paddingTop="22dp"
        android:text="@string/historico"
        android:textColor="@color/cor_menu"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/panicoButton"
        app:layout_constraintTop_toBottomOf="@+id/redeButton" />

    <Button
        android:id="@+id/dadosbutton"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/botao_redondo"
        android:drawableTop="@drawable/ic_home"
        android:paddingTop="22dp"
        android:text="@string/questionario"
        android:textColor="@color/cor_menu"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/redeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>